portfolio/src/components/Techs/style.scss
@import '../../assets/sass/fonts.scss';
@import '../../assets/sass/mixins.scss';
@import '../../assets/sass/variables.scss';

.techs__section-container{
    @include sectionContainer;
}

.techs__section-title{
    @include sectionTitle;
    &::after{
        background: url('../../assets/img/tech-title-underline.svg') no-repeat left center / contain;
    }
}

.techs__section{
    display: flex;
    gap: 2rem;
    justify-content: space-between;
    @media screen and (max-width: 768px){
        flex-direction: column-reverse;
        align-items: center;
        gap: 1rem;
    }
}

.techs__section-texts{
    display: flex;
    flex-direction: column;
    gap: 1.5rem;
    flex-grow: 1;
    max-width: 58%;
    @media screen and (max-width: 768px){
        max-width: 100%;
        gap: .5rem;
    }
}

.techs__text{
    font-size: 1.25rem;
    font-family: $font-opensans;
    color: $color-dark-2;
    strong{
        color: $color-dark-1;
        font-weight: 700;
    }
    &.-icon{
        img{
            width: 22px;
            margin: 0 5px;
        }
    }
}

.techs__section-icons{
    background: url('../../assets/img/techs-animation-bg.svg') no-repeat center center / contain;
    width: 350px;
    height: 350px;
    display: flex;
    align-items: center;
    position: relative;
    
    &::before{
        content: '';
        position: absolute;
        background: url('../../assets/img/techs-bg-lines.svg') no-repeat center center / cover;
        width: 305px;
        height: 170px;
        right: -50%;
        top: 25%;
        z-index: -1;
    }
    @media screen and (max-width: 768px){
        width: 100%;
        max-width: 350px;
        &::after{
            content: '';
            position: absolute;
            background: url('../../assets/img/techs-bg-lines.svg') no-repeat center center / cover;
            width: 305px;
            height: 170px;
            left: -50%;
            top: 25%;
            transform: rotate(180deg);
            z-index: -1;
        }
    }
}

.tech__icons-name{
    position: absolute;
    top: 2.5rem;
    display: flex;
    justify-content: center;
    width: 100%;
    font-size: 1.8rem;
    font-family: $font-vanguard;
    font-weight: 500;
    color: $color-white;
    gap: .5rem;
    @media screen and (max-width: 340px){
        top: 4rem;
        font-size: 1.6rem;
    }
}

.techs__section-icons-container{
    position: relative;
    width: 100%;
    overflow: hidden;
    border-radius: 55px;
    .swiper-slide{
        width: 100%;
        display: flex;
        justify-content: center;
    }
    .swiper-3d .swiper-slide-shadow-left, .swiper-3d .swiper-slide-shadow-right{
        background-image: none;
    }
    img{
        transition: all .3s ease-in-out;
        margin: auto;
        width: 140px;
        height: 140px;
    }
    .swiper-slide-next, .swiper-slide-prev{
        img{
            transform: scale(.8);
        }
    }
}

.git__bg-icon{
    position: absolute;
    width: 50px;
    height: 50px;
    top: -40px;
    left: -80px;
    z-index: -1;
    @media screen and (max-width: 768px){
        top: -20px;
        left: -10px;
    }
}

.sass__bg-icon{
    position: absolute;
    width: 60px;
    height: 60px;
    bottom: -100px;
    right: -20px;
    z-index: -1;
    @media screen and (max-width: 768px){
        bottom: -20px;
        right: -20px;
    }
}

.cheese__bg-illustration{
    position: absolute;
    width: 500px;
    height: 110px;
    right: 50%;
    left: 50%;
    transform: translateX(-50%);
    bottom: -100px;
}

